Sync Ulavar Santhai app and dual authentication
